oxiplate-derive/tests/broken/char/unescapable.stderr
error: Unknown character escape. Expected `\\`, `\"`, `\'`, `\n`, `\r`, `\t`, or `\0`
 --> tests/broken/char/unescapable.rs:4:24
  |
4 | #[oxiplate_inline(r"{{ '\%' }}")]
  |                        ^^^^
